# common_utils

./: .gitmodules  CMakeLists.txt  conanfile.py
src/utils/: bitmask.h  config.h  container.h  datatable.h  ecsv.h  eigen.h  eigeniter.h  enum.h  ex.h  filename.h  filesystem.h  func.h  grppiex.h  logging.h  matplotlibcpp.h  meta.h  meta_enum.h  mpi.h  nc.h  utils.h  yamlconfig.h
src/utils/algorithm/: ei_ceresfitter.h  ei_convolve.h  ei_detect1d.h  ei_iterclip.h  ei_linspaced.h  ei_polyfit.h  ei_stats.h
src/utils/enum/: meta_enum.h
src/utils/formatter/: bitmask.h  common.h  container.h  eigeniter.h  enum.h  matrix.h  ptr.h  utils.h
src/utils/nddata/: nddata.h
src/utils/yavl/: README.md  yavl.cpp  yavl.h
test_progs/mpi/: CMakeLists.txt  main.cpp
tests/: .clang-tidy  CMakeLists.txt  eigeniter.cpp  main.cpp  test_enums.h
